--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.15",
+    "axios": "^0.18.0",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.9.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
@@ -27,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.5.0",
+    "@graphql-codegen/introspection": "1.5.0",
+    "@graphql-codegen/typescript": "1.5.0",
+    "@graphql-codegen/typescript-operations": "1.5.0",
+    "@graphql-codegen/typescript-react-apollo": "1.5.0"
   }
 }
